; ModuleID = '/home/carl/AnghaBench/linux/drivers/media/usb/pwc/extr_pwc-ctrl.c_pwc_set_u16_ctrl.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/media/usb/pwc/extr_pwc-ctrl.c_pwc_set_u16_ctrl.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.pwc_device = type { i32* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @pwc_set_u16_ctrl(%struct.pwc_device* %0, i32 %1, i32 %2, i32 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca %struct.pwc_device*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  store %struct.pwc_device* %0, %struct.pwc_device** %6, align 8
  store i32 %1, i32* %7, align 4
  store i32 %2, i32* %8, align 4
  store i32 %3, i32* %9, align 4
  %11 = load i32, i32* %9, align 4
  %12 = and i32 %11, 255
  %13 = load %struct.pwc_device*, %struct.pwc_device** %6, align 8
  %14 = getelementptr inbounds %struct.pwc_device, %struct.pwc_device* %13, i32 0, i32 0
  %15 = load i32*, i32** %14, align 8
  %16 = getelementptr inbounds i32, i32* %15, i64 0
  store i32 %12, i32* %16, align 4
  %17 = load i32, i32* %9, align 4
  %18 = ashr i32 %17, 8
  %19 = load %struct.pwc_device*, %struct.pwc_device** %6, align 8
  %20 = getelementptr inbounds %struct.pwc_device, %struct.pwc_device* %19, i32 0, i32 0
  %21 = load i32*, i32** %20, align 8
  %22 = getelementptr inbounds i32, i32* %21, i64 1
  store i32 %18, i32* %22, align 4
  %23 = load %struct.pwc_device*, %struct.pwc_device** %6, align 8
  %24 = load i32, i32* %7, align 4
  %25 = load i32, i32* %8, align 4
  %26 = load %struct.pwc_device*, %struct.pwc_device** %6, align 8
  %27 = getelementptr inbounds %struct.pwc_device, %struct.pwc_device* %26, i32 0, i32 0
  %28 = load i32*, i32** %27, align 8
  %29 = call i32 @send_control_msg(%struct.pwc_device* %23, i32 %24, i32 %25, i32* %28, i32 2)
  store i32 %29, i32* %10, align 4
  %30 = load i32, i32* %10, align 4
  %31 = icmp slt i32 %30, 0
  br i1 %31, label %32, label %34

32:                                               ; preds = %4
  %33 = load i32, i32* %10, align 4
  store i32 %33, i32* %5, align 4
  br label %35

34:                                               ; preds = %4
  store i32 0, i32* %5, align 4
  br label %35

35:                                               ; preds = %34, %32
  %36 = load i32, i32* %5, align 4
  ret i32 %36
}

declare dso_local i32 @send_control_msg(%struct.pwc_device*, i32, i32, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
